ingress-nginx/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: next-webapp-deploy
  name: next-webapp-deploy
  namespace: ingress-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: next-webapp
  template:
    metadata:
      labels:
        app: next-webapp
    spec:
      containers:
        - name: gossby-frontend
          image: registry.9prints.com/phucdt/gossby-frontend:staging-6bedba10
          ports:
            - name: http
              containerPort: 3000
          imagePullPolicy: IfNotPresent
      imagePullSecrets:
        - name: regcred
      nodeSelector:
        kubernetes.io/os: linux
