ingress-nginx/service.yml
apiVersion: v1
kind: Service
metadata:
  name: next-webapp
  namespace: ingress-nginx
  labels:
    run: next-webapp
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: next-webapp
  type: ClusterIP
