ingress-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: olongvien-ingress
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
    - host: olongvien.online
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: next-webapp
                port:
                  number: 80
            path: /
  tls:
    - hosts:
        - olongvien.online
      secretName: olongvien-tls
